--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @import url('./css/base.css');
+    @import url('./css/basic-grid.css');
   </style>
   <title>Document</title>
 </head>
 <body>
-  
+  <p>autofill</p>
+  <section class="basic-grid autofill">
+    <div class="card">1</div>
+    <div class="card">2</div>
+    <div class="card">3</div>
+  </section>
+  <p>autofit</p>
+  <section class="basic-grid autofit">
+    <div class="card">1</div>
+    <div class="card">2</div>
+    <div class="card">3</div>
+  </section>
+  <p>Big responsive grid</p>
+  <section class="basic-grid autofit">
+    <div class="card">1</div>
+    <div class="card">2</div>
+    <div class="card">3</div>
+    <div class="card">4</div>
+    <div class="card">5</div>
+    <div class="card">6</div>
+    <div class="card">7</div>
+    <div class="card">8</div>
+    <div class="card">9</div>
+    <div class="card">10</div>
+    <div class="card">11</div>
+    <div class="card">12</div>
+  </section>
 </body>
 </html>
