--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @import url('./css/base.css');
+    @import url('./css/animated-grid.css');
   </style>
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="animated-grid">
+    <div class="card">a</div>
+    <div class="card">b</div>
+    <div class="card">c</div>
+    <div class="card">d</div>
+    <div class="card">e</div>
+    <div class="card">f</div>
+    <div class="card">g</div>
+    <div class="card">h</div>
+    <div class="card">i</div>
+    <div class="card">j</div>
+    <div class="card">k</div>
+    <div class="card">l</div>
+    <div class="card">main</div>
+  </div>
 </body>
 </html>
